@@ -6,26 +6,21 @@ use strict;
 use warnings;
 
 GetOptions(
-    'live!'         => \my $live,
     'local!'        => \my $local,
     'mech-dump!'    => \my $mechdump,
     'all'           => \my $all,
 );
 
 if ( $all ) {
-    $live = $local = $mechdump = 1;
+    $local = $mechdump = 1;
 }
 else {
-    if ( not defined $live ) {
-        $live = get_live();
-    }
     if ( not defined $local ) {
         $local = 1;
     }
 }
 
 my @tests = glob File::Spec->catfile( 't', '*.t' );
-push( @tests, glob File::Spec->catfile( 't', 'live', '*.t' ) ) if $live;
 push( @tests, glob File::Spec->catfile( 't', 'local', '*.t' ) ) if $local;
 push( @tests, glob File::Spec->catfile( 't', 'mech-dump', '*.t' ) ) if $mechdump;
 
@@ -108,45 +103,4 @@ EOT
 WriteMakefile( %$parms );
 
 
-sub get_live {
-    require IO::Socket;
-    my $s = IO::Socket::INET->new(
-        PeerAddr => "www.google.com:80",
-        Timeout  => 10,
-    );
-    if ($s) {
-        close($s);
-
-        print <<EOT;
-
-Part of WWW::Mechanize's test suite is run live tests against Google.
-These tests are a good way to make sure that Mechanize is ready to run
-in your environment, but they can also cause warnings if test sites have
-changed since the last update of Mechanize.  Skipping them won't hurt,
-but it might ignore problems.
-
-EOT
-    }
-    else {
-        print <<EOT;
-
-It seems that you are not directly connected to the Internet.  Some of the
-WWW::Mechanize tests interact with websites such as Google, in addition
-to its own internal tests.  If you are not connected to the Internet,
-these tests will probably fail.
-
-EOT
-
-    } # failed connect
-    my $dolive = (prompt("Do you want to enable these live tests?", "n") =~ /^y/i);
-
-    print <<EOT;
-
-Note that you can skip this question with --live or --nolive on the
-command line when you run Makefile.PL.
-
-EOT
-
-    return $dolive;
-}
 
